--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -143,7 +143,7 @@
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
                         {% if user.is_authenticated %}
-                        <li><a href="profile/" class="nav-link px-2 text-white">Profile</a></li>
+                        <li><a href="{% url 'profile2' %}" class="nav-link px-2 text-white">Profile</a></li>
                         {% endif %}
                         <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
                         <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
