--- a/product/templates/product/productdata.html
+++ b/product/templates/product/productdata.html
@@ -131,7 +131,7 @@
 
 
 <body>
-    <header class="p-3 text-bg-dark">
+    <header class="p-3 text-bg-dark"style="background: repeating-linear-gradient(34deg, black, transparent 100px);background-attachment: fixed;table-layout: fixed;position: fixed;/* display: grid; */display: block;width: 100%;/* background: linear-gradient(0deg, black, transparent); */">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -158,7 +158,7 @@
                 </form>
                 {% if user.is_authenticated %}
                 <div class="text-end">
-                    <a href="{% url 'logout' %}?next={{request.path}}"> <button type="button"
+                    <a href="{% url 'logout' %}?next={{'/'}}"> <button type="button"
                             class="btn btn-outline-light me-2">logout</button> </a>
                 </div>
                 {% else %}
@@ -173,10 +173,12 @@
         </div>
     </header>
 
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
     <main>
+        <div style = "    
+        height: calc(100vh - 56vw);
+    " >
+             
+        </div> 
         <div>
             <div class='form' style=" display: flex; ">
                 <form method="POST" enctype="multipart/form-data" style="background-color: aliceblue;
@@ -192,23 +194,22 @@
                     </div>
                     {% if field.name == 'product_descrition' %}
                     <div class="product_descrition" style="margin: 0 0 14px;">
-                    {{field}}
+                        {{field}}
                     </div>
                     {% else %}
                     <div style="margin: 0 0 14px;">
-                    {{field}}
+                        {{field}}
                     </div>
                     {% endif %}
-                    <div style="margin: 0 0 14px;">
+                    <!-- <div style="margin: 0 0 100px;">
                         {{field.product_descrition}}
-                    </div>
-                    
+                    </div> -->
+
                     {% endfor %}
                     <input type="submit" style="margin: 14px;padding: 15px;">
                 </form>
             </div>
         </div>
-        <img src="{{Request.user.productdata.product_image.url}}" alt="{{ user.productdata_set.product_name }}">
     </main>
 
     <script src="" async defer></script>
