--- a/product/templates/product/profile2.html
+++ b/product/templates/product/profile2.html
@@ -126,7 +126,7 @@
 </svg>
 
 <body>
-    <header class="p-3 text-bg-dark">
+    <header class="p-3 text-bg-dark"style="background: repeating-linear-gradient(34deg, black, transparent 100px);background-attachment: fixed;table-layout: fixed;position: fixed;/* display: grid; */display: block;width: 100%;/* background: linear-gradient(0deg, black, transparent); */">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -153,7 +153,7 @@
                 </form>
                 {% if user.is_authenticated %}
                 <div class="text-end">
-                    <a href="{% url 'logout' %}?next={{request.path}}"> <button type="button"
+                    <a href="{% url 'logout' %}?next={{'/'}}"> <button type="button"
                             class="btn btn-outline-light me-2">logout</button> </a>
                 </div>
                 {% else %}
@@ -177,6 +177,10 @@
                 <p> you are logged In </p>
                 <p> welcome: {{user.get_username}} </P>
             {% endif %} -->
+            <div style = "    
+        height: calc(100vh - 56vw);">
+             
+        </div> 
     <div style="
             display: flex;
             justify-content: center;
@@ -184,22 +188,25 @@
             flex-direction: column;
             flex-wrap: nowrap;
         ">
+        <div style ="display: grid;justify-content: center; text-align: -webkit-center;    text-align: center;margin-top: 12vh; ">
         <div
-            style="display: grid;justify-content: center; text-align: -webkit-center;    text-align: center;margin-top: 12vh; ">
-            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"
-                style="height: 100px; width: 100px;border-radius: 100px;" alt="profile photo">
-            <p> {{user.get_username}}<a href="#" class="nav-link px-2 text-black">edit profile</a> </P>
-        </div>
+            style="background-image:url({{user_detail.0.user_image.url}}); background-size:  cover; border-radius: 100px;
+            {% if user_detail.0.user_image.url == null %}background-image:url(https://cdn-icons-png.flaticon.com/512/20/20079.png){% endif %} ">
+             <div style="height: 100px;width: 100px;border-radius: 100px;border: solid;border-color: black;">
+                </div>
+            </div>
+        <p> {{user.get_username}}<a href="{% url 'editprofile' %}" class="nav-link px-2 text-black">edit profile</a> </P>
         <!-- <div style="display: grid;justify-content: center; text-align: -webkit-center;    text-align: center;"><a href="#" class="nav-link px-2 text-black">Add product</a></div> -->
-
+        </div>
     </div>
 
     <main>
         
-        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="background-image:url({{product_list.0.product_image.url}});">
+        
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="background-image:url({{product_list.0.product_image.url}});background-size: contain;">
             <div class="col-md-5 p-lg-5 mx-auto my-5">
-                <h1 class="display-4 fw-normal">Punny headline</h1>
-                <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with
+                <h1 class="display-4 fw-normal " style ="backdrop-filter: blur(3px); color: ghostwhite;">Punny headline</h1>
+                <p class="lead fw-normal"style ="backdrop-filter: blur(3px); color: ghostwhite;">And an even wittier subheading to boot. Jumpstart your marketing efforts with
                     this example based on Apple’s marketing pages.</p>
                 <a class="btn btn-outline-secondary" href="#">Coming soon</a>
             </div>
