--- a/product/templates/product/editprofile.html
+++ b/product/templates/product/editprofile.html
@@ -61,23 +61,7 @@
             fill: currentColor;
         }
 
-        .nav-scroller {
-            position: relative;
-            z-index: 2;
-            height: 2.75rem;
-            overflow-y: hidden;
-        }
-
-        .nav-scroller .nav {
-            display: flex;
-            flex-wrap: nowrap;
-            padding-bottom: 1rem;
-            margin-top: -1px;
-            overflow-x: auto;
-            text-align: center;
-            white-space: nowrap;
-            -webkit-overflow-scrolling: touch;
-        }
+        
 
         .form-control-dark {
             border-color: var(--bs-gray);
@@ -92,9 +76,21 @@
             font-size: 85%;
         }
 
-        .dropdown-toggle {
-            outline: 0;
+                body {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        color: #5a5a5a;
         }
+        @media (min-width: 767px){
+        .mb-lg-01 {
+            margin-bottom: 0!important;
+        }
+      }
+      @media (min-width: 767px){
+        .me-lg-3 {
+            margin-right: 1rem!important;
+        }
+    }
     </style>
 </head>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -131,89 +127,94 @@
 
 
 <body>
-    <div class = "header" style = "height:auto;">
-    <header class="p-3 text-bg-dark"style="background: repeating-linear-gradient(34deg, black, transparent 100px);background-attachment: fixed;table-layout: fixed;position: fixed;/* display: grid; */display: block;width: 100%;/* background: linear-gradient(0deg, black, transparent); */">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap" />
-                    </svg>
-                </a>
-    
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
-                    {% if user.is_authenticated %}
-                    <li><a href="{% url 'profile2' %}" class="nav-link px-2 text-secondary">Profile</a></li>
-                    <li><a href="" class="nav-link px-2 text-white">Add product</a></li>
-                    {% endif %}
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-                </ul>
-    
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-                {% if user.is_authenticated %}
-                <div class="text-end">
-                    <a href="{% url 'logout' %}?next={{'/'}}"> <button type="button"
-                            class="btn btn-outline-light me-2">logout</button> </a>
+    <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">Project!1</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                  <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                      <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
+                      {% if user.is_authenticated %}
+                      <li><a href="{% url 'profile2' %}" class="nav-link px-2 text-secondary">Profile</a></li>
+                      <li><a href="{% url 'productdata' %}" class="nav-link px-2 text-white">Add product</a>
+                      </li>
+                      {% endif %}
+                      <li><a href="{% url 'Product' %}" class="nav-link px-2 text-white">Product</a></li>
+                      <li><a href="/#about" class="nav-link px-2 text-white">About</a></li>
+                  </ul>
+                  <form class=" col-lg-auto mb-3 mb-lg-01 me-lg-3" role="search">
+                      <input type="search" class="form-control form-control-dark text-bg-dark"
+                          placeholder="Search..." aria-label="Search">
+                  </form>
+                  {% if user.is_authenticated %}
+                  <div class="text-end">
+                      <a href="{% url 'logout' %}?next={{'/'}}"> <button type="button"
+                              class="btn btn-outline-light me-2">logout</button> </a>
+                  </div>
+                  {% else %}
+                  <div class="text-end">
+                      <a href="{% url 'login' %}?next={{request.path}}"> <button type="button"
+                              class="btn btn-outline-light me-2">Login</button></a>
+                      <a href="signup/"> <button type="button" class="btn btn-warning">Sign-up</button></a>
+                  </div>
+                  {% endif %}
                 </div>
-                {% else %}
-                <div class="text-end">
-                    <a href="{% url 'login' %}?next={{request.path}}"> <button type="button"
-                            class="btn btn-outline-light me-2">Login</button></a>
-                    <a href="signup/"> <button type="button" class="btn btn-warning">Sign-up</button></a>
-                </div>
-                {% endif %}
+              </div>
+            </nav>
+</header>
     
-            </div>
-        </div>
-    </header>
-    </div>
-
+   
     <main>
+        
+        <div style="display: flex;/* display: grid; */flex-direction: row;flex-wrap: wrap;justify-items: stretch;align-content: center;">
+        <div class = "p-3 text-bg-dark" style="background: repeating-linear-gradient(34deg, black, transparent 100px);display: flex;flex-direction: column;flex-wrap: nowrap;align-items: flex-start; min-height: 92vh; ">
+        <a href="{% url 'business' %}" class="nav-link px-2 text-white-70 bus">Business</a>
+        <a href="{% url 'editprofile' %}" class="nav-link px-2 text-white-70 form">Profile edit</a>
+        </div>
+        <div class='form'
+            style="display: flex;flex-direction: column;*/justify-content: space-evenly;align-items: center;flex-wrap: nowrap; ">
+            
 
-        <div style = "
-        height: calc(100vh - 56vw);" >
-             
-        </div> 
 
-
-        <div class='form' style="display: flex;flex-direction: column;*/justify-content: space-evenly;align-items: center;flex-wrap: nowrap; ">
-        <div>
-                <form method="POST" enctype="multipart/form-data" style="background-color: aliceblue;
-            display: inline-grid;
-            justify-items: stretch;
-            padding: 25px;
-            /* box-shadow: 20px 18px 6px 0px rgb(0 0 0 / 61%); */
-            ">
+            {% if  form != null %}
+            <div>
+                <form method="POST" enctype="multipart/form-data" style="background-color: rgb(255, 255, 255);
+                    display: inline-grid;
+                    justify-items: stretch;
+                    padding: 25px;
+                    /* box-shadow: 20px 18px 6px 0px rgb(0 0 0 / 61%); */
+                ">
                     {% csrf_token %}
                     {% for field in form1 %}
                     <div class='mb-3' style='margin: 0!important'>
                         {{field.label_tag}}
                     </div>
                     {% if field.name == 'user_image' %}
-                    <div style ="display: grid;justify-content: center; text-align: -webkit-center;    text-align: center;margin-top: 12vh; ">
                     <div
-                        style="background-image:url({{user_detail.0.user_image.url}}); background-size:  cover; border-radius: 100px;
+                        style="display: grid;justify-content: center; text-align: -webkit-center;    text-align: center;margin-top: 12vh; ">
+                        <div
+                            style="background-image:url({{user_detail.0.user_image.url}}); background-size:  cover; border-radius: 100px;
                         {% if user_detail.0.user_image.url == null %}background-image:url(https://cdn-icons-png.flaticon.com/512/20/20079.png) {% endif %}">
-                        <div style="height: 100px;width: 100px;border-radius: 100px;border: solid;border-color: black;">
+                            <div
+                                style="height: 100px;width: 100px;border-radius: 100px;border: solid;border-color: black;">
+                            </div>
                         </div>
                     </div>
-                    </div>
-                       {{field}}
-              
-                    <input type="submit"  name="form1_submit" value="Submit" style="margin: 14px;padding: 15px;">
+                    {{field}}
+
+                    <input type="submit" name="form1_submit" value="Submit" style="margin: 14px;padding: 15px;">
                     {% endif %}
                     {% endfor %}
                 </form>
             </div>
+            {% endif %}
+
+            {% if  form != null %}
             <div class='formd' style=" display: flex; ">
-                <form method="POST" enctype="multipart/form-data" style="background-color: aliceblue;
+                <form method="POST" enctype="multipart/form-data" style="background-color: rgb(255, 255, 255);
                 display: inline-grid;
                 justify-items: stretch;
                 padding: 25px;
@@ -224,19 +225,58 @@
                     <div class='mb-3' style='margin: 0!important'>
                         {{field.label_tag}}
                     </div>
-                    
-                        {{field}}
-                    
-                     
-                        {% endfor %}
-                    
-                    <input type="submit"  name="form_submit" value="Submit" style="margin: 14px;padding: 15px;">
-                   
-                </form>
-                
-            </div>
 
+                    {{field}}
+
+
+                    {% endfor %}
+                    
+                    {% if  form != null %}
+                    <input type="submit" name="form_submit" value="Submit" style="margin: 14px;padding: 15px;">
+                    {% endif %}
+
+
+                </form>
+
+            </div>
+            {% endif %}
+
+           
+
+
+            {% if  form3 != null  %}
+              
+            
+            <div class='bus' style=" display: flex; ">
+    
+    
+                <form method="POST" enctype="multipart/form-data" style="background-color: rgba(255, 255, 255, 0.565);
+                display: inline-grid;
+                justify-items: stretch;
+                padding: 25px;
+                /* box-shadow: 20px 18px 6px 0px rgb(0 0 0 / 61%); */
+                ">
+                    {% csrf_token %}
+                    {% for field in form3 %}
+                    <div class='mb-3' style='margin: 0!important'>
+                        {{field.label_tag}}
+                    </div>
+    
+                    {{field}}
+    
+    
+                    {% endfor %}
+                    {% if  form3 != null %}
+                    <input type="submit" name="form3_submit" value="Submit" style="margin: 14px;padding: 15px;">
+                    {% endif %}
+    
+                </form>
+    
+            </div>
+            {% endif %}
+            
         </div>
+    </div>
     </main>
 
     <script src="" async defer></script>
